--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <style>
     /* ==================================================
-       VARIABLES · TEMAS
+       VARIABLES · RESET · BASE
     ================================================== */
     :root {
       --bg-main: #0b0b0b;
@@ -19,24 +19,10 @@
       --text-main: #ffffff;
       --text-muted: #b3b3b3;
       --border-soft: rgba(255,255,255,0.08);
-      --accent: #ffffff;
       --radius: 14px;
       --transition: 0.6s cubic-bezier(.2,.8,.2,1);
     }
 
-    body.light {
-      --bg-main: #f6f6f6;
-      --bg-soft: #ffffff;
-      --bg-card: #eeeeee;
-      --text-main: #111111;
-      --text-muted: #555555;
-      --border-soft: rgba(0,0,0,0.08);
-      --accent: #111111;
-    }
-
-    /* ==================================================
-       RESET · BASE
-    ================================================== */
     * {
       margin: 0;
       padding: 0;
@@ -52,12 +38,12 @@
       background: var(--bg-main);
       color: var(--text-main);
       line-height: 1.65;
-      transition: background var(--transition), color var(--transition);
       -webkit-font-smoothing: antialiased;
     }
 
-    section {
-      padding: 120px 8vw;
+    img {
+      max-width: 100%;
+      display: block;
     }
 
     a {
@@ -65,22 +51,8 @@
       text-decoration: none;
     }
 
-    /* ==================================================
-       TOGGLE TEMA
-    ================================================== */
-    .theme-toggle {
-      position: absolute;
-      top: 32px;
-      right: 8vw;
-      font-size: 13px;
-      color: var(--text-muted);
-      cursor: pointer;
-      transition: color var(--transition);
-      z-index: 10;
-    }
-
-    .theme-toggle:hover {
-      color: var(--text-main);
+    section {
+      padding: 120px 8vw;
     }
 
     /* ==================================================
@@ -107,7 +79,7 @@
     .cursor {
       width: 42px;
       height: 42px;
-      border: 1px solid var(--border-soft);
+      border: 1px solid rgba(255,255,255,0.35);
       border-radius: 50%;
       position: fixed;
       pointer-events: none;
@@ -124,9 +96,10 @@
       display: inline-block;
       padding: 14px 34px;
       border-radius: 999px;
-      border: 1px solid var(--accent);
+      border: 1px solid #fff;
       font-size: 14px;
       letter-spacing: 0.05em;
+      overflow: hidden;
       transition: background var(--transition), color var(--transition), transform var(--transition);
     }
 
@@ -136,8 +109,8 @@
     }
 
     .btn:hover {
-      background: var(--accent);
-      color: var(--bg-main);
+      background: #fff;
+      color: #000;
       transform: translateY(-2px);
     }
 
@@ -146,35 +119,16 @@
     }
 
     /* ==================================================
-       HOME · FONDO RELOJ
+       HOME
     ================================================== */
     .home {
-      position: relative;
       min-height: 100vh;
       display: flex;
       align-items: center;
-      overflow: hidden;
-      background: var(--bg-main);
-    }
-
-    .home::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background: url("reloj1.jpg") center / cover no-repeat;
-      opacity: 0.12;
-      filter: grayscale(100%) contrast(1.1);
-      z-index: 0;
-    }
-
-    body.light .home::before {
-      opacity: 0.18;
-      filter: grayscale(100%) contrast(1.05);
+      background: radial-gradient(circle at top, #1a1a1a, #070707);
     }
 
     .home-content {
-      position: relative;
-      z-index: 1;
       max-width: 900px;
     }
 
@@ -208,6 +162,7 @@
 
     .about h2 {
       font-size: 42px;
+      font-weight: 500;
       margin-bottom: 28px;
     }
 
@@ -228,6 +183,7 @@
     ================================================== */
     .portfolio h2 {
       font-size: 42px;
+      font-weight: 500;
       margin-bottom: 64px;
     }
 
@@ -238,11 +194,11 @@
     }
 
     .project {
+      position: relative;
       aspect-ratio: 4 / 3;
-      background: var(--bg-card);
+      background: #1a1a1a;
       border-radius: var(--radius);
       border: 1px solid var(--border-soft);
-      position: relative;
       overflow: hidden;
       cursor: pointer;
       transition: transform var(--transition);
@@ -255,16 +211,14 @@
     .project-overlay {
       position: absolute;
       inset: 0;
-      background: rgba(0,0,0,0.7);
+      background: rgba(0,0,0,0.75);
       display: flex;
       align-items: center;
       justify-content: center;
+      text-align: center;
+      padding: 24px;
       opacity: 0;
       transition: opacity var(--transition);
-    }
-
-    body.light .project-overlay {
-      background: rgba(255,255,255,0.8);
     }
 
     .project:hover .project-overlay {
@@ -277,20 +231,45 @@
     }
 
     /* ==================================================
-       CV · SKILLS · CONTACTO
+       CV
     ================================================== */
-    .cv, .skills {
+    .cv {
       background: var(--bg-soft);
     }
 
-    .cv h2, .skills h2, .contact h2 {
+    .cv h2 {
       font-size: 42px;
       margin-bottom: 52px;
     }
 
+    .cv-section {
+      margin-bottom: 56px;
+    }
+
+    .cv-item {
+      margin-bottom: 26px;
+    }
+
     .cv-item span {
+      display: block;
       font-size: 14px;
       color: var(--text-muted);
+    }
+
+    .download {
+      margin-top: 56px;
+    }
+
+    /* ==================================================
+       HABILIDADES
+    ================================================== */
+    .skills h2 {
+      font-size: 42px;
+      margin-bottom: 48px;
+    }
+
+    .skills-group {
+      margin-bottom: 34px;
     }
 
     .tags {
@@ -308,9 +287,17 @@
       color: var(--text-muted);
     }
 
+    /* ==================================================
+       CONTACTO · FOOTER LOCAL
+    ================================================== */
     .contact {
-      background: var(--bg-main);
+      background: #070707;
       padding-bottom: 90px;
+    }
+
+    .contact h2 {
+      font-size: 42px;
+      margin-bottom: 52px;
     }
 
     .contact-cards {
@@ -321,8 +308,8 @@
 
     .contact-card {
       padding: 32px;
-      background: var(--bg-card);
       border-radius: var(--radius);
+      background: var(--bg-card);
       border: 1px solid var(--border-soft);
       font-size: 14px;
       color: var(--text-muted);
@@ -332,7 +319,7 @@
       margin-top: 90px;
       text-align: center;
       font-size: 12px;
-      color: var(--text-muted);
+      color: #666;
       opacity: 0;
       transform: translateY(20px);
       transition: opacity var(--transition), transform var(--transition);
@@ -350,6 +337,7 @@
       .about-grid {
         grid-template-columns: 1fr;
       }
+
       .portfolio-grid,
       .contact-cards {
         grid-template-columns: 1fr 1fr;
@@ -360,6 +348,7 @@
       section {
         padding: 80px 6vw;
       }
+
       .portfolio-grid,
       .contact-cards {
         grid-template-columns: 1fr;
@@ -370,11 +359,8 @@
 
 <body>
 
-  <!-- Cursor -->
+  <!-- CURSOR -->
   <div class="cursor"></div>
-
-  <!-- Toggle tema -->
-  <div class="theme-toggle" id="themeToggle">Modo claro</div>
 
   <!-- HOME -->
   <section class="home">
@@ -390,9 +376,9 @@
     <div class="about-grid reveal">
       <div>
         <h2>Sobre mí</h2>
-        <p class="reveal delay-1">Soy Luis Blasco-Ibáñez Berbel, diseñador industrial en formación con una fuerte base técnica.</p>
-        <p class="reveal delay-2">Trabajo desde el equilibrio entre precisión, estética y funcionalidad.</p>
-        <p class="reveal delay-3">El detalle no es un añadido: es el diseño.</p>
+        <p class="delay-1 reveal">Soy Luis Blasco-Ibáñez Berbel, diseñador industrial en formación, con una mente ecléctica y perfeccionista.</p>
+        <p class="delay-2 reveal">Mi base técnica en electricidad se combina con una fuerte sensibilidad estética, especial interés en impresión 3D y prototipado.</p>
+        <p class="delay-3 reveal">Concibo el diseño como equilibrio entre forma, función y detalle consciente.</p>
       </div>
       <div class="about-image">
         <img src="https://via.placeholder.com/600x800" alt="Luis Blasco">
@@ -400,7 +386,82 @@
     </div>
   </section>
 
-  <!-- (Portfolio · CV · Skills · Contacto seguirían igual que antes) -->
+  <!-- PORTFOLIO -->
+  <section class="portfolio" id="portfolio">
+    <h2 class="reveal">Portfolio</h2>
+    <div class="portfolio-grid reveal">
+      <div class="project"><div class="project-overlay"><p>Producto · Prototipado · 3D</p></div></div>
+      <div class="project"><div class="project-overlay"><p>Diseño técnico · Desarrollo funcional</p></div></div>
+      <div class="project"><div class="project-overlay"><p>Concepto · Iteración · Detalle</p></div></div>
+    </div>
+  </section>
+
+  <!-- CV -->
+  <section class="cv">
+    <h2 class="reveal">Currículum</h2>
+
+    <div class="cv-section reveal">
+      <h3>Formación académica</h3>
+      <div class="cv-item">Ingeniería en Diseño Industrial<span>UPV · 09/2024 – En curso</span></div>
+      <div class="cv-item">Ingeniería en Diseño Industrial<span>UJI · 09/2021 – 07/2024</span></div>
+      <div class="cv-item">Grado Superior Electrotécnico<span>Escuelas San José · 2019 – 2021</span></div>
+    </div>
+
+    <div class="cv-section reveal">
+      <h3>Experiencia laboral</h3>
+      <div class="cv-item">Montador cuadros eléctricos<span>Autrial · 2017</span></div>
+      <div class="cv-item">Mantenimiento eléctrico<span>Elecnor · 2021</span></div>
+    </div>
+
+    <div class="download reveal">
+      <a href="cv_luis_blasco.pdf" download class="btn"><span>Descargar currículum</span></a>
+    </div>
+  </section>
+
+  <!-- HABILIDADES -->
+  <section class="skills">
+    <h2 class="reveal">Habilidades</h2>
+
+    <div class="skills-group reveal">
+      <h4>Modelado 3D</h4>
+      <div class="tags">
+        <span class="tag">Inventor</span><span class="tag">Fusion 360</span>
+        <span class="tag">SolidWorks</span><span class="tag">3ds Max</span>
+        <span class="tag">AutoCAD</span>
+      </div>
+    </div>
+
+    <div class="skills-group reveal">
+      <h4>Diseño gráfico y web</h4>
+      <div class="tags">
+        <span class="tag">Photoshop</span><span class="tag">Illustrator</span>
+        <span class="tag">InDesign</span><span class="tag">Animate</span>
+        <span class="tag">GitHub</span>
+      </div>
+    </div>
+
+    <div class="skills-group reveal">
+      <h4>Técnica y procesos</h4>
+      <div class="tags">
+        <span class="tag">Prototipado</span>
+        <span class="tag">Impresión 3D</span>
+        <span class="tag">Corte láser</span>
+      </div>
+    </div>
+  </section>
+
+  <!-- CONTACTO -->
+  <section class="contact">
+    <h2 class="reveal">Contacto</h2>
+
+    <div class="contact-cards reveal">
+      <div class="contact-card">Email<br>luisblascoibanezberbel@gmail.com</div>
+      <div class="contact-card">LinkedIn<br>linkedin.com/in/luisblasiber</div>
+      <div class="contact-card">Teléfono<br>+34 630 511 806</div>
+    </div>
+
+    <footer>© 2026 · Luis Blasco-Ibáñez Berbel</footer>
+  </section>
 
   <!-- JS -->
   <script>
@@ -415,26 +476,22 @@
 
     /* Cursor */
     const cursor = document.querySelector('.cursor');
+    const interactive = document.querySelectorAll('a, .project');
+
     document.addEventListener('mousemove', e => {
       cursor.style.left = e.clientX + 'px';
       cursor.style.top = e.clientY + 'px';
-      cursor.style.opacity = 1;
     });
 
-    /* Toggle tema */
-    const toggle = document.getElementById('themeToggle');
-    const body = document.body;
-
-    if (localStorage.getItem('theme') === 'light') {
-      body.classList.add('light');
-      toggle.textContent = 'Modo oscuro';
-    }
-
-    toggle.addEventListener('click', () => {
-      body.classList.toggle('light');
-      const isLight = body.classList.contains('light');
-      toggle.textContent = isLight ? 'Modo oscuro' : 'Modo claro';
-      localStorage.setItem('theme', isLight ? 'light' : 'dark');
+    interactive.forEach(el => {
+      el.addEventListener('mouseenter', () => {
+        cursor.style.opacity = 1;
+        cursor.style.transform = 'translate(-50%, -50%) scale(1.4)';
+      });
+      el.addEventListener('mouseleave', () => {
+        cursor.style.opacity = 0;
+        cursor.style.transform = 'translate(-50%, -50%) scale(1)';
+      });
     });
   </script>
 
